Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -356,14 +356,14 @@
        "4  0.06905  6.0622  7.147   0.0  54.2  36.2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "data = boston[['crim', 'dis', 'rm', 'zn', 'age', 'medv']]\n",
+    "data = boston[['crim', 'dis', 'rm', 'zn', 'age', 'medv']].copy()\n",
     "data.head()"
    ]
   },
