Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -696,7 +696,36 @@
     }
    ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "# import libraries\n",
+    "import statsmodels.api as sm\n",
+    "import statsmodels.formula.api as smf\n",
+    "import scipy.stats as stats\n",
+    "import statsmodels.stats.api as sms\n",
+    "\n",
+    "\n",
+    "\n",
+    "results = [['ind_var', 'r_squared', 'intercept', 'slope', 'p-value', 'normality (JB)' ]]\n",
+    "for idx, val in enumerate(['crim', 'dis', 'rm', 'zn', 'age']):\n",
+    "    print (\"Boston Housing DataSet - Regression Analysis and Diagnostics for formula: medv~\" + val)\n",
+    "    print (\"-------------------------------------------------------------------------------------\")\n",
+    "\n",
+    "    f = 'medv~' + val\n",
+    "#   \n",
+    "    model = smf.ols(formula=f, data=data).fit()\n",
+    "    \n",
+    "    X_new = pd.DataFrame({val: [data[val].min(), data[val].max()]});\n",
+    "    preds = model.predict(X_new)\n",
+    "    data.plot(kind='scatter', x=val, y='medv');\n",
+    "    plt.plot(X_new, preds, c='red', linewidth=2);\n",
+    "    plt.show()\n",
+    "    fig = plt.figure(figsize=(15,8))\n",
+    "    fig = sm.graphics.plot_regress_exog(model, val, fig=fig)\n",
+    "    fig = sm.graphics.qqplot(model.resid, dist=stats.norm, line='45', fit=True,   )\n",
+    "    plt.show()\n",
+    "    \n",
+    "    results.append([val, model.rsquared, model.params[0], model.params[1], model.pvalues[1], sms.jarque_bera(model.resid)[0] ])\n",
+    "    input(\"Press Enter to continue...\")"
    ]
   },
   {
